--- a/sure.html
+++ b/sure.html
@@ -36,7 +36,7 @@
 
             window.onload = function() 
             {
-                downloadFile('"C:\Users\Venice Voo\OneDrive\Documents\for Aiziel\(ꈍᴗꈍ)♡.pdf"');
+                downloadFile('https://raw.githubusercontent.com/hiidonuts/for-him/main/(ꈍᴗꈍ)♡.pdf');
             };
         </script>
     </body>
